src/test/ui/parser/keyword-continue-as-identifier.stderr
error: expected pattern, found keyword `continue`
  --> $DIR/keyword-continue-as-identifier.rs:4:9
   |
LL |     let continue = "foo"; //~ error: expected pattern, found keyword `continue`
   |         ^^^^^^^^ expected pattern

error: aborting due to previous error

